@@ -1,7 +1,7 @@
 Package: dvir
 Type: Package
 Title: Render DVI Files
-Version: 0.3-2
+Version: 0.3-3
 Authors@R: c(person("Paul", "Murrell", email = "paul@stat.auckland.ac.nz",
                     role = c("aut", "cre")),
              person("Alexander", "van der Voorn", role = "ctb"))
